--- a/main.css
+++ b/main.css
@@ -1,10 +1,20 @@
 * {
+  font-family: "Oswald";
+}
+
+@font-face {
+  font-family: "Oswald";
+  src: url("Oswald-VariableFont_wght.ttf") format("truetype");
 }
 
 body {
+  background-color: lightblue;
 }
 
-h1.title {
+@media only screen and (max-width: 500px) {
+  body {
+    background-color: purple;
+  }
 }
 
 /*
@@ -12,30 +22,60 @@ Here's a comment to show that I know how to use comments
 */
 
 #caption {
+  font-size: 1.2em;
+  margin: 10px;
 }
 
 h1,
 h2,
 h3 {
+  color: rgb(0, 0, 128);
+  border-style: ridge;
+  border-color: royalblue;
+  border-width: 10px;
+  border-radius: 25px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 0.2em;
+  padding-left: 1em;
+  padding-right: 0.5em;
+  padding-bottom: 0.2em;
 }
 
 h3 + em {
+  background-color: rgba(255, 255, 0, 0.5);
 }
 
 label ~ input {
+  background-color: hsl(121, 50%, 80%);
 }
 
 section p {
+  background-color: lightgrey;
+  position: relative;
+  max-width: 70%;
+  min-width: 30%;
+  padding: 20px;
+  display: inline-block;
 }
 
 ol > li {
+  color: #ff0f00;
+  font-size: 1.3em;
 }
 
 a:hover {
+  color: hsla(38, 100%, 50%, 1);
+  font-size: 1.3em;
 }
 
 a:active {
+  color: seashell;
 }
 
 audio[controls] {
+  background-color: orange;
+  display: block;
 }
