--- a/main.css
+++ b/main.css
@@ -33,6 +33,19 @@ body {
   margin-right: 20px;
 }
 
+.container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  row-gap: 30px;
+  column-gap: 20px;
+}
+
+.item {
+  background-color: lavender;
+  padding: 10px;
+  border-radius: 20px;
+}
+
 h1.title {
   font-size: 50px;
   margin: auto;
